RESOLVED FIXED75020
Crash in CSS filters w/zero-size element
https://bugs.webkit.org/show_bug.cgi?id=75020
Summary Crash in CSS filters w/zero-size element
Stephen White
Reported 2011-12-21 11:31:23 PST
Open attached file -> crash. Happens in mac and Chrome/mac builds. Doesn't seem to occur in Chrome/Win and Chrome/Linux.
Attachments
Not sure this is the best fix, but it works (3.91 KB, patch)
2011-12-21 11:34 PST, Stephen White
no flags
Improve the test and expected results; remove svn:eol-style (3.61 KB, patch)
2011-12-21 11:51 PST, Stephen White
dino: review+
Stephen White
Comment 1 2011-12-21 11:34:58 PST
Created attachment 120201 [details] Not sure this is the best fix, but it works
Darin Adler
Comment 2 2011-12-21 11:35:47 PST
Comment on attachment 120201 [details] Not sure this is the best fix, but it works I like this fix.
WebKit Review Bot
Comment 3 2011-12-21 11:35:54 PST
Attachment 120201 [details] did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Updating OpenSource From git://git.webkit.org/WebKit + 3796001...0a192a1 master -> origin/master (forced update) It seems that I cannot create a rebase-apply directory, and I wonder if you are in the middle of patch application or another rebase. If that is not the case, please rm -fr /mnt/git/webkit-style-queue/.git/rebase-apply and run me again. I am stopping in case you still have something valuable there. rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 158. If any of these errors are false positives, please file a bug against check-webkit-style.
Stephen White
Comment 4 2011-12-21 11:51:14 PST
Created attachment 120205 [details] Improve the test and expected results; remove svn:eol-style
Dean Jackson
Comment 5 2011-12-21 13:31:36 PST
Comment on attachment 120205 [details] Improve the test and expected results; remove svn:eol-style Thanks!
Stephen White
Comment 6 2011-12-21 13:40:44 PST
Note You need to log in before you can comment on or make changes to this bug.