Source/WebCore: Fix CSS filters crash on zero-sized elements. https://bugs.webkit.org/show_bug.cgi?id=75020

Reviewed by Dean Jackson.

Test: css3/filters/filter-empty-element-crash.html

* rendering/FilterEffectRenderer.cpp:
(WebCore::FilterEffectRenderer::inputContext):
Protect against null ImageBuffer.
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintLayer):
Protect against null GraphicsContext.

LayoutTests: Test for CSS filters crash on zero-sized element
https://bugs.webkit.org/show_bug.cgi?id=75020

Reviewed by Dean Jackson.

* css3/filters/filter-empty-element-crash-expected.txt: Added.
* css3/filters/filter-empty-element-crash.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@103439 bbb929c8-8fbe-4397-9dbb-9b2b20218538