third_party/WebKit/Source/WebCore/rendering/FilterEffectRenderer.cpp
@@ -89,7 +89,7 @@ FilterEffectRenderer::~FilterEffectRenderer()
 
 GraphicsContext* FilterEffectRenderer::inputContext()
 {
-    return sourceImage()->context();
+    return sourceImage() ? sourceImage()->context() : 0;
 }
 
 void FilterEffectRenderer::build(Document* document, const FilterOperations& operations)
